--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - image: circleci/node:10.15
     working_directory: ~/repo
     environment:
-      CONDA_ENV_PY_VERSION: 3.5.2
+      CONDA_ENV_PY_VERSION: 3.5.4
     steps:
       - checkout
       # Download and cache dependencies
@@ -28,11 +28,14 @@ jobs:
             sudo rm -rf .pyenv/ /opt/circleci/.pyenv/
             # Download and install miniconda
             curl https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  > miniconda.sh
-            sudo bash miniconda.sh -b -p $HOME/miniconda
+            bash miniconda.sh -b -p $HOME/miniconda
             # Create an anaconda virtualenv for python ${CONDA_ENV_PY_VERSION} and make that the default python interpreter
             echo ". /home/circleci/miniconda/etc/profile.d/conda.sh" >> $BASH_ENV
             echo "conda deactivate; conda activate kedro-viz" >> $BASH_ENV
             . /home/circleci/miniconda/etc/profile.d/conda.sh
+      - run:
+          name: Create Conda environment
+          command: |
             conda create --name kedro-viz python=${CONDA_ENV_PY_VERSION} -y
             source $BASH_ENV
       - run:
@@ -95,18 +98,22 @@ jobs:
     environment:
       CONDA_ENV_PY_VERSION: 3.7
   license_checker:
+    resource_class: medium+
     docker:
       - image: circleci/node:10.15
     steps:
       - checkout
       - run:
-          name: Create conda environment
+          name: Instal Miniconda
           command: |
             curl https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  > miniconda.sh
-            sudo bash miniconda.sh -b -p $HOME/miniconda
+            bash miniconda.sh -b -p $HOME/miniconda
             echo ". /home/circleci/miniconda/etc/profile.d/conda.sh" >> $BASH_ENV
             echo "conda deactivate; conda activate license_checker" >> $BASH_ENV
             . /home/circleci/miniconda/etc/profile.d/conda.sh
+      - run:
+          name: Create conda environment
+          command: |
             conda create --name=license_checker python=3.6 -y
             source $BASH_ENV
       - run:
