--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,18 @@
       }
     ]
   ],
-  "presets": ["@babel/preset-env", "@babel/preset-react"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "chrome": "58",
+          "ie": "11"
+        },
+        "useBuiltIns": "usage",
+        "corejs": "3"
+      }
+    ],
+    "@babel/preset-react"
+  ]
 }
