--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@quantumblack/kedro-ui": "^1.1.2",
     "batching-toposort": "^1.2.0",
     "classnames": "^2.2.6",
+    "core-js": "^3.6.5",
     "d3-fetch": "^1.1.2",
     "d3-interpolate-path": "^2.1.0",
     "d3-scale": "^3.0.0",
