--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,10 +137,26 @@ jobs:
           paths:
             - node_modules
           key: v${CACHE_VERSION}-dependencies-{{ checksum "package.json" }}
+  deploy:
+    executor: circleci_machine
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+            name: build docker and publish
+            command: |
+              ./build_image.sh $CIRCLE_TAG --publish --latest
 
 
 workflows:
-  version: 2
-  build:
+  build_and_deploy:
     jobs:
       - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
