--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,9 @@ workflows:
   build_and_deploy:
     jobs:
       - build
+        filters:
+          tags:
+            only: /.*/
       - deploy:
           requires:
             - build
