--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
 workflows:
   build_and_deploy:
     jobs:
-      - build
+      - build:
         filters:
           tags:
             only: /.*/
